--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ strsim = "0.10"
 rayon = "1.5"
 log = "0.4"
 simplelog = "0.12"
-owo-colors = "3.4"
+owo-colors = { version = "3.4", features = ["supports-colors"] }
 csv = "1.1"
 clap = { version = "3.2", features = ["derive", "cargo"] }
 
