Simplify combinations using the permutator crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ simplelog = "0.12"
 owo-colors = { version = "3.4", features = ["supports-colors"] }
 csv = "1.1"
 clap = { version = "3.2", features = ["derive", "cargo"] }
+permutator = "0.4"
 
 [package.metadata.rpm]
 package = "similar-adoc-modules"
