--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ log = "0.4"
 simplelog = "0.12"
 owo-colors = { version = "3.4", features = ["supports-colors"] }
 csv = "1.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 clap = { version = "3.2", features = ["derive", "cargo"] }
 permutator = "0.4"
 trigram = "0.4"
