--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ serde_json = "1.0"
 clap = { version = "3.2", features = ["derive", "cargo"] }
 permutator = "0.4"
 trigram = "0.4"
+ignore = "0.4"
 
 [package.metadata.rpm]
 package = "similar-adoc-modules"
