--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,9 @@ permutator = "0.4"
 trigram = "0.4"
 ignore = "0.4"
 regex = "1.6"
+# Version 0.2.132 seems to cause issues with RPM packages built by Copr.
+# Temporary workaround:
+libc = "=0.2.131"
 
 [package.metadata.rpm]
 package = "near-facsimile"
