--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,8 @@ trigram = "0.4"
 ignore = "0.4"
 regex = "1.6"
 indicatif = { version = "0.17", features = ["rayon"] }
+# Temporary to keep MSRV at 1.57
+time = "=0.3.13"
 
 [package.metadata.rpm]
 package = "near-facsimile"
