--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "near-facsimile"
 version = "1.0.2"
 edition = "2021"
-rust-version = "1.57"
+rust-version = "1.60"
 authors = ["Marek Suchánek <msuchane@redhat.com>"]
 license = "Apache-2.0"
 description = "Find similar or identical text files in a directory"
@@ -19,15 +19,16 @@ strsim = "0.10"
 rayon = "1.5"
 log = "0.4"
 simplelog = "0.12"
-owo-colors = { version = "3.4", features = ["supports-colors"] }
+owo-colors = { version = "3.5", features = ["supports-colors"] }
 csv = "1.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-clap = { version = "3.2", features = ["derive", "cargo"] }
+clap = { version = "=4.0", features = ["derive", "cargo"] }
 permutator = "0.4"
 trigram = "0.4"
-ignore = "0.4"
+# Temporary to keep MSRV at 1.60
+ignore = "=0.4.18"
 regex = "1.6"
 indicatif = { version = "0.17", features = ["rayon"] }
-# Temporary to keep MSRV at 1.57
-time = "=0.3.13"
+# Temporary to keep MSRV at 1.60
+clap_lex = "=0.3.0"
