--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,12 @@ permutator = "0.4"
 trigram = "0.4"
 # Temporary to keep MSRV at 1.60
 ignore = "=0.4.18"
-regex = "1.6"
+regex = "1.7"
 indicatif = { version = "0.17", features = ["rayon"] }
 # Temporary to keep MSRV at 1.60
 clap_lex = "=0.3.0"
+
+[build-dependencies]
+clap = { version = "4.0", features = ["derive", "cargo"] }
+clap_mangen = "0.2"
+regex = "1.7"
