--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ indicatif = { version = "0.17", features = ["rayon"] }
 clap_lex = "=0.3.0"
 
 [build-dependencies]
-clap = { version = "4.0", features = ["derive", "cargo"] }
-clap_mangen = "0.2"
+# Temporary to keep MSRV at 1.60
+clap = { version = "=4.0", features = ["derive", "cargo"] }
+clap_mangen = "=0.2.6"
 regex = "1.7"
