--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ owo-colors = { version = "3.5", features = ["supports-colors"] }
 csv = "1.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-clap = { version = "=4.0", features = ["derive", "cargo"] }
+bpaf = { version = "0.7", features = ["derive", "bright-color"]}
 permutator = "0.4"
 trigram = "0.4"
 regex = "1.7"
@@ -31,10 +31,8 @@ indicatif = { version = "0.17", features = ["rayon"] }
 # Temporary to keep MSRV at 1.62
 time = "=0.3.19"
 ignore = "=0.4.18"
-clap_lex = "=0.3.0"
 
 [build-dependencies]
 # Temporary to keep MSRV at 1.60
-clap = { version = "=4.0", features = ["derive", "cargo"] }
-clap_mangen = "=0.2.6"
+bpaf = { version = "0.7", features = ["derive", "manpage"]}
 regex = "1.7"
