--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "near-facsimile"
 version = "1.0.5"
 edition = "2021"
-rust-version = "1.60"
+#rust-version = "1.60"
 authors = ["Marek Suchánek <msuchane@redhat.com>"]
 license = "Apache-2.0"
 description = "Find similar or identical text files in a directory"
@@ -16,25 +16,22 @@ categories = ["command-line-utilities", "text-processing"]
 [dependencies]
 color-eyre = "0.6"
 strsim = "0.10"
-rayon = "1.5"
+rayon = "1.7"
 log = "0.4"
 simplelog = "0.12"
 owo-colors = { version = "3.5", features = ["supports-colors"] }
-csv = "1.1"
+csv = "1.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-clap = { version = "=4.0", features = ["derive", "cargo"] }
+clap = { version = "4.3", features = ["derive", "cargo"] }
 permutator = "0.4"
 trigram = "0.4"
-# Temporary to keep MSRV at 1.60
-ignore = "=0.4.18"
-regex = "1.7"
+ignore = "0.4"
+regex = "1.9"
 indicatif = { version = "0.17", features = ["rayon"] }
-# Temporary to keep MSRV at 1.60
-clap_lex = "=0.3.0"
 
 [build-dependencies]
 # Temporary to keep MSRV at 1.60
-clap = { version = "=4.0", features = ["derive", "cargo"] }
-clap_mangen = "=0.2.6"
-regex = "1.7"
+clap = { version = "4.3", features = ["derive", "cargo"] }
+clap_mangen = "0.2"
+regex = "1.9"
