--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -5,6 +5,8 @@ description: Find similar or identical text files in a directory
 base: core24
 confinement: strict
 grade: stable
+license: Apache-2.0
+source-code: https://github.com/msuchane/near-facsimile/
 
 apps:
   near-facsimile:
