Fix the snap configuration

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -24,7 +24,7 @@ parts:
       curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable
       ~/.cargo/bin/cargo build --release
       mv target/release/near-facsimile .
-      cargo clean
+      ~/.cargo/bin/cargo clean
       craftctl default
     build-packages:
       - curl
